@@ -6,6 +6,7 @@ package readability
 
 import (
 	"bytes"
+	"errors"
 	"fmt"
 	"io"
 	"math"
@@ -59,6 +60,9 @@ func ExtractContent(page io.Reader) (string, error) {
 			best = body
 			break
 		}
+        if best == nil {
+            return "", errors.New("failed to extract content")
+        }
 	}
 	//log.Printf("[Readability] TopCandidate: %v", topCandidate)
 
