@@ -6,6 +6,7 @@
 - (fix) favicon visibility in dark mode (thanks to @caycaycarly for the report)
 - (fix) autoloading more articles not working in certain edge cases (thanks to @fenuks for the report)
 - (fix) handle Google URL redirects in "Read Here" (thanks to @cubbei for discovery)
+- (fix) handle failures to extract content in "Read Here" (thanks to @grigio for the report)
 
 # v2.3 (2022-05-03)
 
